--- a/sonobus/sonobus-1.3.0/debian/changelog
+++ b/sonobus/sonobus-1.3.0/debian/changelog
@@ -1,3 +1,10 @@
+sonobus (1.3.0-1) buster; urgency=medium
+
+  * Raspberry Pi release 1.3.0-1.
+  * Added new Public Groups feature
+
+ --  Kevin Doren <kevin@doren.org>  Wed, 30 Dec 2020 11:29:00 -0800
+
 sonobus (1.2.2-1) buster; urgency=medium
 
   * Raspberry Pi release 1.2.2-1.
