--- a/sonobus/sonobus-1.3.2/debian/changelog
+++ b/sonobus/sonobus-1.3.2/debian/changelog
@@ -1,3 +1,10 @@
+sonobus (1.3.2-1) buster; urgency=medium
+
+  * Raspberry Pi release 1.3.3-1
+  * Fixed bug where input mute/gain was ignored with only 1 input channel 
+
+ --  Kevin Doren <kevin@doren.org>  Wed, 06 Jan 2021 14:21:00 -0800
+
 sonobus (1.3.1-1) buster; urgency=medium
 
   * Raspberry Pi release 1.3.1-1.
