--- a/jamulus/jamulus-3.8.0/debian/changelog
+++ b/jamulus/jamulus-3.8.0/debian/changelog
@@ -1,3 +1,9 @@
+jamulus (3.8.0-1) buster; urgency=medium
+
+  * Raspberry Pi release 3.8.0
+
+ --  Kevin Doren <kevin@doren.org>  Wed, 02 Jun 2021 10:08:00 -0800
+
 jamulus (3.7.0-1) buster; urgency=medium
 
   * Raspberry Pi release 3.7.0-1
