--- a/jammernetz/jammernetz-2.2.0/debian/changelog
+++ b/jammernetz/jammernetz-2.2.0/debian/changelog
@@ -1,3 +1,9 @@
+jammernetz (2.2.0-1) buster; urgency=medium
+
+  * Raspberry Pi release 2.2.0-1.
+
+ --  Kevin Doren <kevin@doren.org>  Fri, 14 Oct 2021 01:00:00 -0800
+
 jammernetz (2.1.3-1) buster; urgency=medium
 
   * Raspberry Pi release 2.1.3-1.
