--- a/jamulus/jamulus-3.8.1/debian/changelog
+++ b/jamulus/jamulus-3.8.1/debian/changelog
@@ -1,3 +1,9 @@
+jamulus (3.8.1-1) buster; urgency=medium
+
+  * Raspberry Pi release 3.8.1
+
+ --  Kevin Doren <kevin@doren.org>  Mon, 25 Oct 2021 00:00:00 -0800
+
 jamulus (3.8.0-1) buster; urgency=medium
 
   * Raspberry Pi release 3.8.0
