--- a/jacktrip/jacktrip-1.4.0/debian/changelog
+++ b/jacktrip/jacktrip-1.4.0/debian/changelog
@@ -1,3 +1,9 @@
+jacktrip (1.4.0-1) buster; urgency=medium
+
+  * Raspberry Pi release 1.4.0-1
+
+ --  Kevin Doren <kevin@doren.org>  Wed, 03 Nov 2021 23:00:00 -0800
+
 jacktrip (1.3.0-1) buster; urgency=medium
 
   * Raspberry Pi release 1.3.0-1
