--- a/jacktrip/jacktrip-1.4.0/debian/changelog
+++ b/jacktrip/jacktrip-1.4.0/debian/changelog
@@ -1,3 +1,17 @@
+jacktrip (1.4.0-3) buster; urgency=medium
+
+  * Raspberry Pi release 1.4.0-3
+  * fix conflict with qjacktrip.png in jambox update
+
+ --  Kevin Doren <kevin@doren.org>  Sat, 06 Nov 2021 15:00:00 -0800
+
+jacktrip (1.4.0-2) buster; urgency=medium
+
+  * Raspberry Pi release 1.4.0-2
+  * fix conflict with qjacktrip in jambox update
+
+ --  Kevin Doren <kevin@doren.org>  Wed, 03 Nov 2021 13:00:00 -0800
+
 jacktrip (1.4.0-1) buster; urgency=medium
 
   * Raspberry Pi release 1.4.0-1
