--- a/jacktrip/debian/changelog
+++ b/jacktrip/debian/changelog
@@ -1,3 +1,10 @@
+jacktrip (1.4.2-1) buster; urgency=medium
+
+  * Raspberry Pi release 1.4.2-1
+  * Verbose mode in GUI
+
+ --  Kevin Doren <kevin@doren.org>  Tue, 07 Dec 2021 22:00:00 -0800
+
 jacktrip (1.4.0-3) buster; urgency=medium
 
   * Raspberry Pi release 1.4.0-3
