--- a/alsa-lib/debian/changelog
+++ b/alsa-lib/debian/changelog
@@ -1,3 +1,9 @@
+alsa-lib (1.2.6-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Kevin Doren <kevin@doren.org>  Tue, 07 Dec 2021 23:00:00 -0800
+
 alsa-lib (1.2.5.1-1) unstable; urgency=medium
 
   * New upstream release.
