--- a/alsa-utils/debian/changelog
+++ b/alsa-utils/debian/changelog
@@ -1,3 +1,9 @@
+alsa-utils (1.2.6-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Kevin Doren <kevin@doren.org>  Tue, 07 Dec 2021 23:25:00 -0800
+
 alsa-utils (1.2.5.1-1) unstable; urgency=medium
 
   * New upstream release.
