--- a/jacktrip/debian/changelog
+++ b/jacktrip/debian/changelog
@@ -1,3 +1,11 @@
+jacktrip (1.4.3-1) buster; urgency=medium
+
+  * Raspberry Pi release 1.4.3-1
+  * "Generating changelog from YAML file for MkDocs and Flatpaks by @ntonnaett in #442"
+  * "Update jacktrip_globals.h by @cchafe in #443"
+
+ --  Kevin Doren <kevin@doren.org>  Sun, 02 Jan 2022 17:00:00 -0800
+
 jacktrip (1.4.2-1) buster; urgency=medium
 
   * Raspberry Pi release 1.4.2-1
