--- a/jacktrip/debian/changelog
+++ b/jacktrip/debian/changelog
@@ -1,3 +1,10 @@
+jacktrip (1.5.0-1) buster; urgency=medium
+
+  * Raspberry Pi release 1.5.0-1
+  * (added) option to upmix mono clients to stereo in hub server mode patching
+
+ --  Kevin Doren <kevin@doren.org>  Thu, 06 Jan 2022 18:00:00 -0800
+
 jacktrip (1.4.3-1) buster; urgency=medium
 
   * Raspberry Pi release 1.4.3-1
