--- a/alsa-lib/debian/changelog
+++ b/alsa-lib/debian/changelog
@@ -1,3 +1,13 @@
+alsa-lib (1.2.6.1-1) unstable; urgency=medium
+
+  * New upstream release.
+  * Configuration
+  * - conf: fix the device parsing when arguments has no defaults
+  * - conf: accept '_' character in the variable name
+
+ -- Kevin Doren <kevin@doren.org>  Tue, 11 Jan 2022 15:45:00 -0800
+
+
 alsa-lib (1.2.6-1) unstable; urgency=medium
 
   * New upstream release.
