--- a/midipp/debian/changelog
+++ b/midipp/debian/changelog
@@ -1,3 +1,10 @@
+midipp (2.1.2-1) buster; urgency=medium
+
+  * Add support for ALSA
+  * Updates for Android and iOS
+
+ --  Kevin Doren <kevin@doren.org>  Sat, 29 Jan 2022 23:30:00 -0800
+
 midipp (2.1.1-1) buster; urgency=medium
 
   * Raspberry Pi release v2.1.1-1
