--- a/hpsjam/debian/changelog
+++ b/hpsjam/debian/changelog
@@ -1,3 +1,9 @@
+hpsjam (1.0.21-2) unstable; urgency=medium
+
+  * support build under Debian bullseye.
+
+ --  Kevin Doren <kevin@doren.org>  Tue, 08 Feb 2022 02:00:00 -0800
+
 hpsjam (1.0.21-1) buster; urgency=medium
 
   * Update statistics tab.
